[project]
name = "aoc"
version = "0.1.0"
description = "Advent of Code tools"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "click>=8.0",
    "beautifulsoup4>=4.12",
    "requests>=2.30"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project.scripts]
aoc = "aoc.cli:cli"
