[project]
name = "aoc"
version = "0.4.1"
description = "Advent of Code tools"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.12"
dependencies = [
    "click>=8.0",
    "beautifulsoup4>=4.12",
    "requests>=2.30",
    "toml>=0.10",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["aoc"]

[tool.setuptools.package-data]
aoc = ["py.typed"]

[project.urls]
Repository = "https://github.com/programmeerbeertjes/aoc-tools.git"
Changelog = "https://github.com/programmeerbeertjes/aoc-tools/blob/main/CHANGELOG.md"

[project.scripts]
aoc = "aoc.cli:cli"
